Causeview Package Complete/ant script/retrieveUnpackaged/objects/Transaction_Benefit__c.object
<CustomObject>
    <description>Causeview - captures all benefits included with Transaction</description>
    <fields>
        <fullName>Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Allocation record that includes the Event Level Benefit.</description>
        <inlineHelpText>Lookup to the Allocation record that includes the Event Level Benefit.</inlineHelpText>
        <label>Allocation</label>
        <referenceTo>Gift_Detail__c</referenceTo>
        <relationshipLabel>Transaction Benefits</relationshipLabel>
        <relationshipName>Transaction_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of benefit received</description>
        <label>Benefit Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <description>Included benefit</description>
        <label>Benefit</label>
        <referenceTo>Benefit__c</referenceTo>
        <relationshipLabel>Transaction Benefits</relationshipLabel>
        <relationshipName>Transaction_Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes relating to benefit.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Amount__c</fullName>
        <description>Total sponsorship amount of benefit (benefit.sponsorship amount * benefit quantity)</description>
        <formula>Benefit__r.Benefit_Value__c *  Benefit_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of benefit</inlineHelpText>
        <label>Benefit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <description>Transaction linked to event level</description>
        <label>Transaction</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Transaction Benefits</relationshipLabel>
        <relationshipName>Transaction_Benefits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction Benefit</label>
    <nameField>
        <displayFormat>TBN-{0000000}</displayFormat>
        <label>Benefit No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>